--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "keywords": [
     "pathfinder",
     "client",
-    "dns"
+    "dns",
+    "query"
   ],
   "scripts": {
     "pretest": "standard",
@@ -32,7 +33,7 @@
     "faucet": "0.0.1",
     "istanbul": "0.4.5",
     "pre-commit": "1.2.2",
-    "proxyquire": "^1.8.0",
+    "proxyquire": "1.8.0",
     "sinon": "2.3.1",
     "standard": "10.0.2",
     "tap-xunit": "1.7.0",
